Complete test coverage.
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>